tests/NormalTests/paczka1/fuzzy1/75767861.err
Error in line 10: hWE9f A438 94,1
Error in line 20: nl6 S108 76,1
Error in line 24: nl6 S982 94,9
Error in line 25: 1SMwX9vq12 S734 27,1
Error in line 29: 1SMwX9vq12 S108 42,7
